Fix path for bootstrap fonts was broken on local

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,4 +1,4 @@
-$icon-font-path: "/cognicity/bower_components/bootstrap-sass-official/vendor/assets/fonts/bootstrap/";
+$icon-font-path: "../bower_components/bootstrap-sass-official/vendor/assets/fonts/bootstrap/";
 $font-family-base: 'Open Sans', "Helvetica Neue", Helvetica, Arial, sans-serif;
 
 // $brand-primary: #16a085;
